# NokaChat

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LittleCat.pro  LittleCat.vcxproj  README.md  Vanilla.sln  Vanilla.vcxproj  Vanilla.vcxproj.filters  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  myStyle.qss  resource.qrc
Component/: Camera.cpp  Model.h  OpenGLWidget.cpp  OpenGLWidget.h  VideoTool.cpp  VideoTool.h  audioplay.cpp  audioplay.h  audioplayer.cpp  audioplayer.h  dataqueue.cpp  dataqueue.h  decodethread.cpp  decodethread.h  downloadsoft.cpp  downloadsoft.h  downloadsoft.ui  http.cpp  leftsidebarbutton.cpp  leftsidebarbutton.h  multithreaddownload.cpp  multithreaddownload.h  playaudiothread.cpp  playaudiothread.h  playvideothread.cpp  playvideothread.h  videolist.cpp  videowidget.cpp  videowidget.h
Component/musicPlayer/: mymusicplayer.cpp  mymusicplayer.h  mymusicplayer.ui
resources/: resource.qrc  setting.ini
resources/glsl/: earth.frag  earth.vert  hdrBackground.vert  pbr.frag  sky.vert  text.frag  text.vert
resources/model/Earth 2K/: Earth 2K.mtl
resources/model/hutao/: hutao.mtl
source/: myStyle.qss  resource.qrc  setting.ini
source/glsl/: earth.fsh
src/: main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui
src/Component/: Camera.h  Model.cpp  Model.h  OpenGLWidget.cpp  OpenGLWidget.h  TextTexture.cpp  TextTexture.h  audioplayer.cpp  audioplayer.h  dataqueue.cpp  dataqueue.h  decodethread.cpp  decodethread.h  global.cpp  global.h  http.h  leftsidebarbutton.cpp  leftsidebarbutton.h  leftsidebarbutton.ui  mesh.h  modelshowgl.cpp  modelshowgl.h  pbrball.cpp  pbrball.h  playaudiothread.cpp  playaudiothread.h  playvideothread.cpp  playvideothread.h  shader.h  skybox.cpp  skybox.h  videolist.cpp  videolist.h  videotool.cpp  videotool.h  videotool.ui  videowidget.cpp  videowidget.h
src/Component/musicPlayer/: mymusicplayer.cpp  mymusicplayer.h  mymusicplayer.ui
